# PokeEditor

./: CMakeLists.txt
include/: MainFrame.h  MonsterData.h  MonsterEditorApp.h
resources/: example.xml
src/: MainFrame.cpp  MonsterData.cpp  MonsterEditorApp.cpp  main.cpp
